finished homework for lesson 4. Corrected mistakes. Fixed text alignment. (Corrected with the problem due to incorrect image sizes). Maxim was very help. Thank him very much!

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,7 +33,6 @@
 .image-connect {
     width: 296px;
     height: 176px;
-
 }
 
 
@@ -42,7 +41,8 @@
     margin: auto;
     width: fit-content;
     position: center;
+}
 
-
-
+.cards-img {
+    margin: 100px 100px;
 }
